solve parent-child margin collapsing problem

--- a/travel-page/styles.css
+++ b/travel-page/styles.css
@@ -49,6 +49,10 @@
   background-color: rgb(255, 238, 0);
 }
 
+#highlights {
+  padding: 24px;
+}
+
 #highlights h2 {
   text-transform: uppercase;
   text-align: center;
